test/fail/Issue215.agda

module Issue215 where

open import Imports.Bool

{-# COMPILED_DATA Bool Bool True False #-}
